# MiniRendererProj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.bat
include/: AABB.hpp  BVH.hpp  camera.hpp  curve.hpp  glsl.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  renderer.hpp  revsurface.hpp  sampler.hpp  scene_parser.hpp  shader.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
mesh/Klee/: Klee.mtl
mesh/eagle/: Orzel_przedni.mtl
shaders/: PathTracer.frag  screenShader.frag  vertexShader.vert
shaders/tests/: cshader.comp  fshader.frag  vshader.vert
src/: glsl.cpp  image.cpp  main.cpp  material.cpp  mesh.cpp  object3d.cpp  scene_parser.cpp  texture.cpp  utils.cpp
testcases/: scene01_basic.txt  scene08_cornell_box.txt  scene08_cornell_box_balllight.txt  scene08_cornell_box_facelight.txt  scene08_cornell_box_facelight_GPU.txt  scene08_cornell_box_facelight_cube_light.txt  scene08_cornell_box_facelight_cube_normal_interp.txt  scene08_cornell_box_facelight_no_content.txt  scene08_cornell_box_facelight_no_content_transform_light.txt  scene08_cornell_box_facelight_obj_light.txt  scene08_cornell_box_facelight_obj_light1.txt  scene08_cornell_box_facelight_obj_light2.txt  scene09.txt  scene10_teapot.txt  scene10_teapot_facelight.txt  scene10_teapot_facelight_close-up.txt  scene11_cube.txt  scene11_cube_facelight.txt  scene12_Klee.txt  scene12_Klee_facelight.txt  scene12_Klee_facelight2.txt  scene12_Klee_facelight_normal_interp.txt  scene12_Klee_self_light.txt  scene13_eagle.txt  scene13_eagle_facelight.txt  scene14_roadBike_facelight.txt  scene15_cornell_box_sphere.txt  scene16_bunny.txt  scene16_bunny1.txt  scene17_glossy.txt  teaser.txt
tests/: test.cpp  test1.cpp  test2.cpp
